# alpharat

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  mcgs-brief.md  mcgs-formalization.md  pyproject.toml
.claude/commands/exp/: CLAUDE.md  compare.md  iterate.md  learn.md  plan.md  status.md
.claude/skills/pyrat-coordinate-system/: SKILL.md
.claude/skills/pyrat-coordinates/: SKILL.md
.claude/skills/pyrat-direction/: SKILL.md
.claude/skills/pyrat-game-api/: SKILL.md
.claude/skills/pyrat-game-builder/: SKILL.md
.claude/skills/pyrat-observation/: SKILL.md
.claude/skills/pyrat-wall-mud/: SKILL.md
.github/workflows/: ci.yml
alpharat/: __init__.py
alpharat/ai/: __init__.py  base.py  config.py  greedy_agent.py  mcts_agent.py  nn_agent.py  predict_batch.py  random_agent.py  rust_mcts_agent.py  searcher_agent.py  utils.py
alpharat/config/: __init__.py  base.py  checkpoint.py  display.py  game.py  loader.py
alpharat/data/: DOGFOOD.md  __init__.py  batch.py  loader.py  maze.py  recorder.py  rust_sampling.py  sampling.py  sharding.py  types.py
alpharat/eval/: __init__.py  benchmark.py  elo.py  game.py  runner.py  tournament.py
alpharat/experiments/: __init__.py  manager.py  paths.py  schema.py  templates.py
alpharat/mcts/: __init__.py  config.py  decoupled_puct.py  equivalence.py  forced_playouts.py  nash.py  node.py  numba_ops.py  payout_filter.py  policy_strategy.py  reduction.py  result.py  search.py  searcher.py  selection.py  tree.py
alpharat/mcts/debug/: __init__.py  degenerate_cases.json  degenerate_cases.py
alpharat/nn/: CLAUDE.md  __init__.py  augmentation.py  config.py  extraction.py  gpu_dataset.py  local_value_training.py  metrics.py  mlp_training.py  streaming.py  symmetric_training.py  targets.py  training.py  training_utils.py  types.py
alpharat/nn/builders/: __init__.py  (+2 more)
configs/: CLAUDE.md  benchmark.yaml  iterate.yaml  iterate_7x7_scalar.yaml  mcts_vs_random.yaml  puct_sweep.yaml  sample.yaml  sample_5x5_asymmetric.yaml  sample_test.yaml  sample_with_nn.yaml  tournament.yaml  tournament_test.yaml  train.yaml  train_cnn_7x7.yaml  train_cnn_pos_7x7.yaml  train_local_value.yaml  train_local_value_nn_resume.yaml  train_nn_resume.yaml  train_symmetric.yaml  tree_reuse_quick.yaml  tree_reuse_tournament.yaml
configs/game/: 15x11_asymmetric.yaml  15x11_open_asymmetric.yaml  5x5_asymmetric.yaml  5x5_classic.yaml  5x5_open.yaml  5x5_open_asymmetric.yaml  5x5_walls.yaml  7x7_asymmetric.yaml  7x7_open.yaml  7x7_open_asymmetric.yaml
configs/mcts/: 5x5_tuned.yaml  7x7_rust_fast.yaml  7x7_rust_strong.yaml  7x7_rust_tuned.yaml  7x7_scalar_fast.yaml  7x7_scalar_strong.yaml  7x7_scalar_tuned.yaml  fast.yaml
configs/model/: cnn.yaml  cnn_gpool.yaml  mlp.yaml  symmetric.yaml
configs/sample/: 15x11_asymmetric.yaml  15x11_open_asymmetric.yaml  5x5_open.yaml  5x5_open_asymmetric.yaml  5x5_tuned.yaml  7x7_open.yaml  7x7_open_asymmetric.yaml
configs/train/: mlp.yaml
crates/alpharat-bot/: Cargo.toml  bot.toml
crates/alpharat-bot/src/: lib.rs  main.rs  pv.rs
crates/alpharat-mcts/: Cargo.toml
crates/alpharat-mcts-python/: .gitignore  Cargo.toml  pyproject.toml
crates/alpharat-mcts-python/python/alpharat_mcts/: __init__.py
crates/alpharat-mcts-python/python/alpharat_sampling/: __init__.py
crates/alpharat-mcts-python/python/pyrat_engine/: __init__.py  env.py  game.py
crates/alpharat-mcts-python/python/pyrat_engine/_core/: __init__.pyi  builder.pyi  game.pyi  mcts.pyi  observation.pyi
crates/alpharat-mcts-python/python/pyrat_engine/core/: __init__.py  builder.py  builder.pyi  game.pyi  observation.pyi
crates/alpharat-mcts-python/python/tests/: test_callback.py  test_rust_sampling.py  test_search.py
crates/alpharat-mcts-python/src/: lib.rs
crates/alpharat-mcts/benches/: search.rs
crates/alpharat-mcts/src/: backend.rs  bindings.rs  lib.rs  node.rs  search.rs  test_util.rs  tree.rs
crates/alpharat-sampling/: Cargo.toml  build.rs
crates/alpharat-sampling/cpp/: trt_shim.cpp
crates/alpharat-sampling/src/: bindings.rs  cached_backend.rs  encoder.rs  flat_encoder.rs  lib.rs  mux_backend.rs  nn_cache.rs  npz_writer.rs  onnx_backend.rs  recording.rs  selfplay.rs  tensorrt_backend.rs
crates/alpharat-sampling/src/backends/: mod.rs  mux.rs  onnx.rs
crates/alpharat-sampling/tests/: parity.rs
crates/alpharat-sampling/tests/fixtures/: asymmetric_scores_5x5.json  midgame_5x5.json  mud_5x5.json  mud_stuck_5x5.json  nonsquare_7x5.json  open_5x5.json  wall_5x5.json
experiments/: IDEAS.md  LOG-7x7.md  LOG-scalar-mcts.md  LOG.md
scripts/: __init__.py  bench_rust_nn_cache.py  bench_sampling.py  benchmark.py  benchmark_augmentation.py  benchmark_mcts.py  benchmark_tree_reuse.py  export_onnx.py  generate_encoder_fixtures.py  iterate.py  manifest.py  measure_transpositions.py  optuna_sweep.py  pareto_plot.py  prepare_shards.py  profile_rust_selfplay.py  profile_sampling.py  puct_sweep.py  run_tournament.py  run_transposition_sweep.sh  rust_sample.py  sample.py  train.py  train_and_benchmark.py  train_and_benchmark_local_value.py  train_and_benchmark_symmetric.py  train_dqn.py  train_fullbatch_dqn.py  train_local_value.py  train_mcts.py
tests/: test_cli.py
tests/ai/: test_greedy_agent.py  test_mcts_agent.py  test_rust_mcts_agent.py
tests/config/: __init__.py  conftest.py  test_base.py  test_checkpoint.py  test_config_integration.py  test_configs.py  test_game.py  test_loader.py
tests/data/: __init__.py  test_batch.py  test_recorder.py  test_rust_bundle_parity.py  test_sampling.py  test_sharding.py
tests/eval/: test_elo.py
tests/experiments/: __init__.py  test_manager.py  test_paths.py
tests/integration/: __init__.py  test_pipeline.py
tests/mcts/: test_equivalence.py  test_forced_playouts.py  test_nash.py  test_node.py  test_numba_ops.py  test_payout_filter.py  test_policy_strategy.py  test_reduction.py  test_scripted_search.py  test_search.py  test_tree.py
tests/nn/: test_augmentation.py  test_extraction.py  test_gpu_dataset.py  test_metrics.py  test_streaming.py  test_targets.py  test_training.py
(+46 files in other folders)
