[project]
name = "alpharat"
version = "0.2.0"
description = "Experimental AlphaZero adaptation: game-theoretic MCTS for simultaneous two-player games"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Minh Tri Truong", email = "minhtri3007@hotmail.com"}
]
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.60.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "alpharat-mcts",
    "optuna>=3.5",
    "optuna-dashboard>=0.15",
    "plotly>=5.0",
    "kaleido>=0.2",
    "pandas>=2.3.3",
    "matplotlib>=3.10.8",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
    "types-pyyaml>=6.0",
    "types-tqdm>=4.66",
]
train = [
    "torch>=2.0",
    "tensorboard>=2.15",
    "tqdm>=4.66",
]

[project.scripts]
alpharat-sample = "scripts.sample:main"
alpharat-train = "scripts.train:main"
alpharat-train-and-benchmark = "scripts.train_and_benchmark:main"
alpharat-prepare-shards = "scripts.prepare_shards:main"
alpharat-benchmark = "scripts.benchmark:main"
alpharat-manifest = "scripts.manifest:main"
alpharat-iterate = "scripts.iterate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["alpharat", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "N812",   # Allow `import as F` for torch.nn.functional (PyTorch convention)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=alpharat",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["alpharat"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251201",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
alpharat-mcts = { path = "crates/alpharat-mcts-python", editable = true }
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
