[package]
name = "alpharat-mcts-python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "alpharat_mcts_python"
crate-type = ["cdylib"]

[dependencies]
alpharat-mcts = { path = "../alpharat-mcts", features = ["python"] }
alpharat-sampling = { path = "../alpharat-sampling", features = ["python", "onnx"] }
pyrat = { package = "pyrat-rust", git = "https://github.com/mintiti/pyrat-rust", branch = "main", features = ["python"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
alpharat-sampling = { path = "../alpharat-sampling", features = ["onnx-cuda", "tensorrt"] }

[target.'cfg(target_os = "macos")'.dependencies]
alpharat-sampling = { path = "../alpharat-sampling", features = ["onnx-coreml"] }

[features]
default = []
cuda = ["alpharat-sampling/onnx-cuda"]
tensorrt = ["alpharat-sampling/tensorrt"]
