[package]
name = "alpharat-sampling"
version = "0.1.0"
edition = "2021"

[dependencies]
alpharat-mcts = { path = "../alpharat-mcts" }
pyrat = { package = "pyrat-rust", git = "https://github.com/mintiti/pyrat-rust", branch = "main", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
ort = { version = "2.0.0-rc.11", optional = true, default-features = false, features = ["std", "download-binaries", "copy-dylibs", "tls-native"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4"] }
pyo3 = { version = "0.25", optional = true }
numpy = { version = "0.25", optional = true }
sha2 = { version = "0.10", optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
default = []
onnx = ["dep:ort"]
onnx-coreml = ["onnx", "ort/coreml"]
onnx-cuda = ["onnx", "ort/cuda"]
python = ["dep:pyo3", "dep:numpy", "pyrat/python"]
tensorrt = ["dep:sha2", "dep:cc"]
